--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
@@ -9,30 +10,28 @@
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="img/instagram-celular.png" alt="Celular instagram">
         </div>
-        <div class="instagram-continue">
-            <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+        <div class="central-de-contas"> 
+            <div class="instagram-group"> 
+                <div class="instagram-logo">
+                    <img src="img/instagram-logo.png" alt="instagram logo">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <div class="foto-de-perfil">
+                    <img src="img/perfil-instagram.jpeg" alt="imagem de perfil">
+                </div>
+                <a href="" class="continuar-como">Continuar como joselucasholanda</a>
+                <a href="" class="texto-blue">Remover conta</a>
             </div>
-            <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
-                </p>
+            <div class="instagram-group">
+                <p><a href="" class="texto-blue">Trocar de conta</a> ou 
+                <a href="" class="texto-blue">Cadastre-se</a></p>
             </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+            <div class="obtenha-o-app">
+                <p>Obtenha o aplicativo</p>
+                <div class="button-style">
+                    <a href=""><img src="img/apple-button.png" alt="Button apple"></a>
+                    <a href=""><img src="img/googleplay-button.png" alt="Button googleplay"></a>
                 </div>
             </div>
         </div>
